syntax = "proto3";

package hoz.proto.v1.data;

option java_multiple_files = true;
option java_package = "net.hoz.api.data";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "resulter/proto/Resulter.proto";

/*
Data that can be owned by someone
 */
message OwnableData {
  message History {
    /*
    Timestamp of change
     */
    google.protobuf.Timestamp timestamp = 1;
    /*
    New owner of this data
     */
    string newOwner = 2;
    /*
    Old owner of this data
     */
    string oldOwner = 3;
  }
  /*
  UUID of the owner
   */
  string uuid = 1;
  /*
  History of the data
   */
  repeated History ownerHistory = 2;
}

/*
Operation that changes data
 */
message DataOperation {
  enum OriginSource {
    BAGR = 0;
    LOBBY_SERVER = 1;
    GAME_SERVER = 2;
    PROXY_SERVER = 3;
    WEB = 4;
  }

  enum OriginType {
    SYSTEM = 0;
    STAFF = 1;
    GAME = 2;
    BUY = 3;
    PLAYER = 4;
    FRIEND = 5;
    GUILD = 6;
  }

  enum State {
    PENDING = 0;
    COMPLETED = 1;
    DECLINED = 2;
    EXPIRED = 3;
  }

  /*
  Generated UUID of the operation
   */
  string operationId = 1;
  /*
  Optional UUID of operation sender
   */
  string operationSender = 2;
  /*
  Current state of this operation
   */
  State state = 3;
  /*
  Source of the operation (web, server, etc)
   */
  OriginSource originSource = 4;
  /*
  Type of the origin (player, buy, transfer, etc)
   */
  OriginType originType = 5;
  /*
  Serialized LocalDateTime of creation
   */
  google.protobuf.Timestamp createdDateTime = 6;
}

/*
Utility for using UUID as message.
 */
message WUUID {
  string value = 1;
}

/*
Wrapper for a result that can have Data.
 */
message ResultableData {
  /**
  UUID of the operation or data holder.
   */
  string uuid = 1;
  resulter.proto.GrpcResultable result = 2;

  google.protobuf.Any data = 3;
}