syntax = "proto3";

package hoz.proto.v1.game;

option java_multiple_files = true;
option java_package = "net.hoz.api.service";

import "hoz/proto/v1/data/CommonData.proto";
import "hoz/proto/v1/game/GameData.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "resulter/proto/Resulter.proto";

message MGameType {
 GameType type = 1;
}

message MGameData {
  GameData.Type dataType = 1;
  GameType gameType = 2;
}

service GameService {
  rpc oneByName(google.protobuf.StringValue) returns (hoz.proto.v1.data.ResultableData);
  rpc oneById(hoz.proto.v1.data.WUUID) returns (hoz.proto.v1.data.ResultableData);

  rpc all(MGameType) returns (stream hoz.proto.v1.data.ResultableData);
  rpc allData(MGameData) returns (stream hoz.proto.v1.data.ResultableData);

  rpc saveGame(hoz.proto.v1.game.NetGame) returns (stream hoz.proto.v1.data.ResultableData);
  rpc saveData(hoz.proto.v1.game.GameData) returns (stream hoz.proto.v1.data.ResultableData);

  rpc subscribeForNetGameUpdate(MGameType) returns (stream hoz.proto.v1.game.NetGame);
  rpc subscribeForNetGameDataUpdate(MGameType) returns (stream hoz.proto.v1.game.GameData);
}