syntax = "proto3";

package hoz.proto.v1.game;

option java_multiple_files = true;
option java_package = "net.hoz.api.data.game";

import "sandals.proto.v1/Tasker.proto";

import "hoz/proto/v1/data/CommonData.proto";
import "hoz/proto/v1/game/ProtoGameTeam.proto";
import "hoz/proto/v1/game/ProtoGameStore.proto";
import "hoz/proto/v1/game/ProtoGameWorld.proto";
import "hoz/proto/v1/game/ProtoGameSpawner.proto";

message ProtoGameFrame {
  string uuid = 1;
  string name = 2;
  string displayName = 3;

  string configName = 4;

  repeated ProtoGameTeam teams = 5;
  repeated ProtoGameStore stores = 6;
  repeated ProtoGameSpawner spawners = 7;
  ProtoGameWorld world = 8;

  int32 minPlayers = 9;
  hoz.proto.v1.data.GameType type = 10;
  GameConfig customConfig = 11;
}

enum GamePhase {
    LOADING = 0;
    WAITING = 1;
    STARTING = 2;
    IN_GAME = 3;
    DEATH_MATCH = 4;
    ENDING = 5;
    RESTART = 6;
    MAINTENANCE = 7;
    CUSTOM = 8;
    DISABLED = 9;
}

message GameConfig {
  string name = 1;
  hoz.proto.v1.data.GameType type = 2;

  Tick tick = 3;
  Times times = 4;
  Enabled enabled = 5;
  Spawners spawners = 6;
  Destroyable destroyable = 7;

  bool customized = 8;

  message Tick {
    sandals.proto.v1.ProtoTaskerTime unit = 1;
    int32 speed = 2;
  }

  message Times {
    int32 start = 1;
    int32 inGame = 2;
    int32 deathMatch = 3;
    int32 end = 4;
  }

  message Enabled {
    bool teams = 1;
    bool stores = 2;
    bool spectators = 3;
    bool spawners = 4;
    bool arenaSpawn = 5;
    bool crafting = 6;
  }

  message Spawners {
    bool stopIfTeamIsDead = 1;
    bool addItemsToInventory = 2;
  }

  message Destroyable {
    repeated string blocks = 1;
  }
}