syntax = "proto3";

package hoz.proto.v1.game;

option java_multiple_files = true;
option java_package = "net.hoz.api.data.game";

import "hoz/proto/v1/data/CommonData.proto";
import "sandals.proto.v1/Location.proto";
import "sandals.proto.v1/Tasker.proto";

message ProtoGameSpawner {
  string uuid = 1;
  string spawnerTypeName = 2;
  string teamName = 3;

  sandals.proto.v1.ProtoLocation location = 4;

  bool withHologram = 6;
  bool useGlobalValues = 7;

  map<string, string> customData = 100;
}

message ProtoSpawnerType {
  string name = 1;
  string nameTranslation = 2;
  string material = 3;
  hoz.proto.v1.data.MinecraftColor color = 4;

  ProtoSpawnerSettings settings = 5;

  hoz.proto.v1.data.GameType type = 6;
  bool global = 7;
}

message ProtoSpawnerSettings {
  double spread = 1;
  int32 maxSpawnAmount = 2;
  int32 spawnAmount = 3;
  int32 spawnPeriod = 4;
  sandals.proto.v1.ProtoTaskerTime spawnTime = 5;
}