syntax = "proto3";

package hoz.proto.v1.game;

option java_multiple_files = true;
option java_package = "net.hoz.api.data.game";

import "sandals.proto.v1/Location.proto";

message ProtoGameWorld {
  string gameId = 1;
  map<string, ProtoWorldData> customWorlds = 2;
  ProtoWorldData arenaWorld = 3;
  ProtoWorldData lobbyWorld = 4;
}

message ProtoWorldData {
  string name = 1;
  WorldType type = 2;

  sandals.proto.v1.ProtoLocation border1 = 3;
  sandals.proto.v1.ProtoLocation border2 = 4;
  sandals.proto.v1.ProtoLocation spawn = 5;
  sandals.proto.v1.ProtoLocation spectator = 6;

  bool destroyable = 7;

  map<string, sandals.proto.v1.ProtoLocation> customLocations = 100;
  map<string, string> customData = 101;

  enum WorldType {
    UNKNOWN = 0;
    LOBBY = 1;
    ARENA = 2;
  }

  enum BorderType {
    FIRST = 0;
    SECOND = 1;
  }
}